gitops/clusters/oci-a1/gaegaeting-dev/ingress/ui.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: gaegaeting-dev-ui
  namespace: gaegaeting-dev
spec:
  hosts:
  - test-ggt-ui.rvkang.app
  exportTo:
  - istio-system
  gateways:
  - istio-system/gaegaeting-dev-public
  http:
  - match:
    - port: 443
    route:
    - destination:
        host: integration-ui
        port:
          number: 8080
